--- a/davi_learn/docker-app/dockerfile
+++ b/davi_learn/docker-app/dockerfile
@@ -1,9 +1,20 @@
+## Base image - Set the baseImage to use for subsequent instructions.
 FROM node:latest
 
-COPY . .
+## Install - Execute any commands on top of the current image as a new layer and commit the results.
+RUN npm install -g nodemon
 
+## Set working directory - Define the working directory for any subsequent instructions.
+WORKDIR /app
+
+## Create app directory - Copy files or folders from source to the dest path in the image's filesystem.
+COPY . . 
+
+## Install app dependencies - Execute any commands on top of the current image as a new layer and commit the results.
 RUN npm install
 
+## Bundle app source - Define the network ports that this container will listen on at runtime.
 EXPOSE 5500
 
-CMD [ "node","index.js" ]
+## Run - Execute any commands on top of the current image as a new layer and commit the results.
+CMD [ "npm","run","dev" ]
